--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "brotli": "^1.3.3",
     "lightweight-charts": "^4.2.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
